# skif-solo

scripts/: generate_build_mingw.bat  generate_vc2019_debug.cmd  generate_vc2022_console_debug.cmd
src/: CMakeLists.txt  initargs.h  logger.h  soundcontroller.h  textgame.h
src/engine/: CMakeLists.txt  encodecheck.cpp  encodecheck.h  logger.cpp  mainloop.cpp  programoptions.cpp  programoptions.h  soundstubs.cpp
src/loggers/: loggersfactory.h
src/loggers/catch2/: CMakeLists.txt  catch2logger.cpp
src/loggers/file/: CMakeLists.txt  filelogger.cpp
src/loggers/none/: CMakeLists.txt  nonelogger.cpp
src/loggers/simple/: CMakeLists.txt  simplelogger.cpp
src/platform/: platformio.h
src/platform/console/: CMakeLists.txt  console_platform.cpp
src/platform/console_auto_speech/: CMakeLists.txt  console_auto_speech.cpp
src/platform/gui/: CMakeLists.txt  mainframe.cpp  mainframe.h  platform_gui.cpp  settingsdialog.cpp  settingsdialog.h
src/platform/http/: CMakeLists.txt  http_platform.cpp  http_platform_old.cpp  httpserver.cpp  httpserver.h  serverlog.cpp  serverlog.h
src/platform/telnet/: CMakeLists.txt  sfml_tcp_platform.cpp
src/sound/: soundcontrollerfactory.h
src/sound/miniaudio/: CMakeLists.txt  miniaudio_sound.cpp
src/sound/mud_protocol/: CMakeLists.txt  soundmud.cpp
src/sound/none/: CMakeLists.txt  soundnone.cpp
src/sound/sfml/: CMakeLists.txt  sfml_sound.cpp
src/speechio/: tts.h  voice_recognition.h
src/speechio/tolk_dll/: tolk.cpp
src/unittest/: CMakeLists.txt  test_parser.cpp
